--- a/sample/LePtC.tex
+++ b/sample/LePtC.tex
@@ -85,7 +85,8 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\com{说明\eq{\downarrow} }\\
 	
 	
-	&\ent[entry left]{词条} \hspace{30pt} \entc[entry center]{词条} \hspace{20pt}	
+	&\ent[\B Superconducting \B{QU}antum \B Interference \B Device]{超导量子干涉器}
+	
 	&\verb|\ent[entry]{词条} | 
 	&居中用 \verb|\entc| 		\\
 	
@@ -204,7 +205,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\com{公式环境下默认为斜体} \\
 
 	其它字母、元素符号为正体
-	&\eq{\kb,\NA,F\inter,\cc,\mathrm{He}}
+	&\eq{\kB,\NA,F\inter,\cc,\mathrm{He}}
 	&\verb|\mathrm{}| \\
 
 	粗体注册为群论
@@ -233,6 +234,10 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	张量
 	&\eq{\vvecd{T},\vvvec{\varepsilon}}
 	&\verb|\vvecd{T},\vvvec{\varepsilon}|\\
+
+	矢量算符
+	&\eq{\hatv{p},\hatvs{S}}
+	&\verb|\hatv{p},\hatvs{S}|\\
 	
 	导数,偏导数
 	&\eqd{\od{y}{x},\pd[2]{L}{x},\md{L}{4}{x}{2}{y}{2}}
@@ -268,7 +273,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
 \href{http://linux-wiki.cn/wiki/zh-hans/LaTeX%E4%B8%AD%E6%96%87%E6%8E%92%E7%89%88%EF%BC%88%E4%BD%BF%E7%94%A8XeTeX%EF%BC%89 }{ LaTeX中文排版（使用XeTeX）}
 
-\href{http://www.wikibooks.org }{维基}
+\href{http://www.wikibooks.org }{维基 book}
 
 
 
