--- a/sample/LePtC.tex
+++ b/sample/LePtC.tex
@@ -13,26 +13,26 @@ Last compiled on {\yyyymmdddate\today} at {\hhmmsstime} [UTC+8]
 
 \chap{安装}
 
-\ent[install TeX]{安装\TeX 系统} 
-Windows 系统可选择安装 
+\ent[install TeX]{安装\TeX 系统}
+Windows 系统可选择安装
 \href{http://miktex.org/download}{MiKTeX}
-然后选择自动安装缺失的包,或直接安装 
-\href{http://www.ctex.org/CTeXDownload }{CTeX Full} 
+然后选择自动安装缺失的包,或直接安装
+\href{http://www.ctex.org/CTeXDownload }{CTeX Full}
 或 \href{http://www.ctan.org/tex-archive/systems/texlive/Images/ }{TeXLive iso} ,
-前两者是把 \file{leptc.cls} 放到 
+前两者是把 \file{leptc.cls} 放到
 \code{CTeX/MiKTeX/tex/latex/} 目录下,
 然后在 MiKTeX 的 Settings 里面点 Refresh FNDB 即可,
-后者是在 \code{texlive/2014/texmf.cnf} 末尾加上 
-\\ \code{TEXMFLOCAL = $SELFAUTOPARENT/../texmf-local,E:/blabla/(anypath)}, 
-\\然后把\file{leptc.cls} 放到 
+后者是在 \code{texlive/2014/texmf.cnf} 末尾加上
+\\ \code{TEXMFLOCAL = $SELFAUTOPARENT/../texmf-local,E:/blabla/(anypath)},
+\\然后把\file{leptc.cls} 放到
 \code{(anypath)/tex/latex/misc} 这个路径中,
 在命令行执行 \code{texhash} 即可
 
-\ent[compiler]{编译器} 
+\ent[compiler]{编译器}
 只有 latex+dvipdfmx 或 xelatex 编译出的 pdf 能正确复制,
 前者请参考文件 \file{leptc.sty}
 
-dvipdfmx 方案本狸已停止更新,推荐使用 \XeTeX 方案, 
+dvipdfmx 方案本狸已停止更新,推荐使用 \XeTeX 方案,
 xelatex 的编译命令及常用选项：
 
 \code{xelatex --quiet --synctex=1 -interaction=nonstopmode $(NAME_PART).tex}
@@ -41,29 +41,29 @@ xelatex 需要多编译几遍才能正确生成书签,
 可在所有编译完成后加入对
 \file{.aux,.out,.log}等文件的清理命令
 
-\com{xelatex.exe 等编译器均在 
-\code{CTeX/MiKTeX/miktex/bin/} 
+\com{xelatex.exe 等编译器均在
+\code{CTeX/MiKTeX/miktex/bin/}
 或 \code{texlive/2014/bin/win32} 目录下,
 如果命令行没有此命令,可在命令中输入 exe 的完整路径,
 或手动将路径添加到系统的环境变量并重启}
 
-\ent[editor]{编辑器} 
+\ent[editor]{编辑器}
 \href{http://tex.stackexchange.com/questions/339/latex-editors-ides }{各种编辑器的比较},
 熟悉哪个就用哪个好啦,
-初学者可以就用安装\TeX 系统时带的 TeXworks 
+初学者可以就用安装\TeX 系统时带的 TeXworks
 
-阿狸用的是 notepad++, synctex 需要借助一个 dde 插件 
+萌狸用的是 notepad++, synctex 需要借助一个 dde 插件
 cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
-\ent[reader]{阅读器} 推荐使用 
-\href{http://blog.kowalczyk.info/software/sumatrapdf/download-free-pdf-viewer-cn.html }{SumatraPDF} 
-来查看 pdf,有 
+\ent[reader]{阅读器} 推荐使用
+\href{http://blog.kowalczyk.info/software/sumatrapdf/download-free-pdf-viewer-cn.html }{SumatraPDF}
+来查看 pdf,有
 \href{http://xhmikosr.1f0.de/sumatrapdf/ }{64 位版本}
 \com{非官方的}
 
 支持 synctex,需在 \code{InverseSearchCmdLine} 里填入相应编辑器反向查找的命令
 
-\ent[tex file]{tex 文档} 
+\ent[tex file]{tex 文档}
 新建filename.tex,存为 UTF-8 无 BOM 格式,
 开头为 \verb|\documentclass{leptc}|,
 然后就可以 \\ \verb|\begin{document}| 闭着眼睛写啦,
@@ -83,33 +83,33 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\com{效果见右上方\eq{\nearrow} }
 	&\verb|\chap{中文}|
 	&\com{说明\eq{\downarrow} }\\
-	
-	
+
+
 	&\ent[\B Superconducting \B{QU}antum \B Interference \B Device]{超导量子干涉器}
-	
-	&\verb|\ent[entry]{词条} | 
+
+	&\verb|\ent[entry]{词条} |
 	&居中用 \verb|\entc| 		\\
-	
-	
-	&\eng[English translation]{注英文} 	
-	&\verb|\eng[English]{正文} | 
+
+
+	&\eng[English translation]{注英文}
+	&\verb|\eng[English]{正文} |
 	& 用 \verb|\engr| 则英文标在右侧 		\\
 
-	
-	&\enl{标签} 	
-	&\verb|\enl{标签} | 
+
+	&\enl{标签}
+	&\verb|\enl{标签} |
 	& 用于\enl{例},\enl{定理},\enl{推论}等		\\
 
-	inline公式 
+	inline公式
 	&\eq{f(x,y)=\frac{\e^x}{y}}
 	&\verb|\eq{\frac{\e^x}{y}}|
 	&放弃用\verb|$$|,配对容易出错	\\
 
-	display公式 
+	display公式
 	&\eqd{f(x,y)=\frac{\e^x}{y}}
 	&\verb|\eqd{\frac{\e^x}{y}}|
 	&修改公式模式只需加一个 \verb|d|即可	\\
-	
+
 	&\com{注释}
 	&\verb|\com{注释}|
 	&多行注释用\verb|\coms{注\\释}|	\\
@@ -119,7 +119,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\verb|\prv{blabla=}|
 	&灰色的优先级低于自动高亮 	\\
 
-	笔记间的链接 
+	笔记间的链接
 	&\link{颜色}
 	&\verb|\link[笔记名]{章节名}|
 	&同一笔记内的链接笔记名可省略	\\
@@ -135,7 +135,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
 \figr{ali.jpg}{0.1}
 {
-图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 
+图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to 图文混排 \to
 }
 \begin{tabular}{ll}
 {\ttfamily
@@ -162,24 +162,25 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
 模版对以下情况做自动高亮：
 
+\prv{更新：暂时取消橙色, 都用绿色, 单位换成蓝色, 章节由红色改为紫色}
 \ \\
 \begin{tabular}{lccl}
 
-	函数名橙色
+	函数名\sout{橙色}
 	&\eq{\sin(x+y),\exp[x+y]}
 	&\verb|\e^{x+y},\exp[x+y]|
-	&自然对数 \eq{\e^x} 也变橙色,命令为 \verb|\e| \\
-	
+	&自然对数 \eq{\e^x} 变橙色,命令为 \verb|\e| \\
+
 	算符绿色
 	&\eq{\dif x,\Dif x,\delta x,\Delta x,\nabla x}
 	&\verb|\dif x,\delta x,\nabla x|
 	&默认自动高亮,不高亮用 \verb|\olddelta| \\
-	
-	物理单位紫色
+
+	物理单位\sout{紫色}
 	&\eq{\oC,6.67\E{-11}\uni{m^3/(kg\cdot s^2)}}
 	&\verb|\uni{m^3/(kg\cdot s^2)}|
-	&虚数单位 \eq{\ii} 也变紫色,命令为 \verb|\ii| \\
-	
+	&虚数单位 \eq{\ii} 变紫色,命令为 \verb|\ii| \\
+
 \end{tabular}
 
 \ \\
@@ -191,6 +192,8 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
 正文默认字体： Adobe 仿宋,\textbf{词条 Adobe 黑体},
 英文 Times New Roman,\engr[Verdana]{英文翻译}
+
+\prv{2015.05 更新：为改善斜杠的显示 \ent{例／例}, 黑体字体改为方正准圆, 不需要的请自行改回去}
 
 打字机 \verb|\texttt{}|用于源代码： \file{file.tex}
 
@@ -208,21 +211,27 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\eq{\kB,\NA,F\inter,\cc,\mathrm{He}}
 	&\verb|\mathrm{}| \\
 
-	粗体注册为群论
-	&\eq{\mathbf{U}(n),\mathbf{SU}(2),\mathbf{T}^\alpha}
-	&\verb|\mathbf{}| \\
-	
 	双线体注册为数域
 	&\eq{\mathbb{N,Z,Q,A,R,C,H}}
 	&\verb|\mathbb{}| \\
-	
-	花体注册为泛函
+
+	花体注册为泛函 %和大O记号?
 	&\eq{\mathcal{L,F,Z}}
 	&\verb|\mathcal{}| \\
-	
+
+  粗体注册为群
+  &\eq{\mathbf{U}(n),\mathbf{SU}(2),\mathbf{T}^\alpha}
+  &\verb|\mathbf{}| \\
+
+  哥特体注册为代数
+  &\eq{\mathfrak{su}(n),\mathfrak{so}(2)}
+  &\verb|\mathfrak{}| \\
+
 \end{tabular}
 
 
+
+\newpage
 \chap{数学}
 
 \begin{tabular}{lcl}
@@ -238,7 +247,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	矢量算符
 	&\eq{\hatv{p},\hatvs{S}}
 	&\verb|\hatv{p},\hatvs{S}|\\
-	
+
 	导数,偏导数
 	&\eqd{\od{y}{x},\pd[2]{L}{x},\md{L}{4}{x}{2}{y}{2}}
 	&\verb|\od{y}{x},\pd[2]{L}{x},\md{L}{4}{x}{2}{y}{2}|\\
@@ -253,8 +262,8 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 	&\verb|\nabla x,\nablad \vec x,\nablat \vec x,\nablas x|\\
 
 	矩阵,行列式
-	&\eq{\mat{1&0\\0&1},\matd{a&b\\c&d}}
-	&\verb|\mat{1&0\\0&1},\matd{a&b\\c&d}|\\
+	&\eq{\mat{1&0\\0&1},\matd{-a&b\\c&-d}}
+	&\verb|\mat{1&0\\0&1},\matd{-a&b\\c&-d}|\\
 
 	左花括号
 	&\eq{\delta _{ij} = \leftB[2]{\matn{1 &(i = j)\\ 0 &(i \ne j)}}}
@@ -267,7 +276,7 @@ cl-2-dde-1.0.exe ,其它编辑器各有不同的设置方法
 
 
 
-\chap{其它}
+\chap{学习网站}
 
 \url{http://tex.stackexchange.com/ }
 
