--- a/tex/latex/misc/leptc.sty
+++ b/tex/latex/misc/leptc.sty
@@ -331,6 +331,15 @@
 	\hspace{-8pt}
 }}
 
+% 带线矩阵 ---------------
+% 用法 {cc:cc} \hdashline[2pt/2pt]
+\newcommand{\mata}[3][1.0]{\scalebox{#1}{
+  \renewcommand{\arraystretch}{.8}
+  \ensuremath{\left[\begin{array}{#2}
+  #3
+  \end{array}\right]}
+}}
+
 % 左花括号
 \newcommand{\leftB}[2][1]{
 	\ifthenelse{\equal{#1}{1}}{\{}{}
@@ -472,8 +481,8 @@
 % （物理单位、函数正体，变量、粒子符号斜体）
 %--------------------------------------------------
 
-% 方便括号配对，整篇文档不需要出现 $
-\newcommand{\eq}[1]{\!$#1$} % 和中文混排需保证每个 \eq 前有个空格...
+% 对于很长的公式，用括号配对更明确，替代 $$
+\newcommand{\eq}[1]{$#1$} % 和中文混排需保证每个 \eq 前有个空格...
 \newcommand{\eqd}[1]{$\displaystyle #1$}
 \newcommand{\eqa}[1]{$\begin{aligned}#1\end{aligned}$}
 % \newcommand{\eqa}[1]{$\begin{align*}#1\end{align*}$}
